--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,17 @@
         android:onClick="OnClick_Client"
         android:text="Подключиться \n к компании" />
 
+    <Button
+        android:id="@+id/Start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="120dp"
+        android:onClick=""
+        android:text="Подключиться \n к компании" />
+
     <ProgressBar
         android:id="@+id/loadingProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -64,16 +75,6 @@
         android:layout_marginTop="102dp"
         android:progress="0"
         android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/durationTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="71dp"
-        android:text="123" />
 
     <TextView
         android:id="@+id/loadingTextView"
