--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,10 +47,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="120dp"
-        android:onClick=""
-        android:text="Подключиться \n к компании" />
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="193dp"
+        android:onClick="OnClick_Start"
+        android:text="Начать вечеринку" />
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
