--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,9 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="47dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginTop="38dp"
+        android:layout_centerInParent="true"
         android:onClick="OnClick_Server"
         android:text="Создать \n компанию" />
 
@@ -34,10 +33,9 @@
         android:id="@+id/Client"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="104dp"
+        android:layout_centerInParent="true"
         android:onClick="OnClick_Client"
         android:text="Подключиться \n к компании" />
 
@@ -45,10 +43,9 @@
         android:id="@+id/Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="40dp"
+        android:layout_centerInParent="true"
         android:onClick="OnClick_Start"
         android:text="Начать вечеринку"
         android:visibility="invisible" />
@@ -56,24 +53,14 @@
     <ProgressBar
         android:id="@+id/loadingProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="303dp"
+        android:layout_width="407dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="407dp"
-        android:progress="0"
-        android:visibility="invisible"/>
-
-    <ProgressBar
-        android:id="@+id/playProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="303dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="102dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="29dp"
         android:progress="0"
         android:visibility="invisible" />
 
@@ -83,21 +70,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="375dp"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="275dp"
         android:text="" />
 
     <EditText
         android:id="@+id/IP"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="51dp"
         android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Введите IP-адрес"
         android:inputType="textPersonName"
+        android:layout_centerInParent="true"
         android:text="192.168.32.211"
         android:visibility="invisible" />
 
@@ -105,10 +91,10 @@
         android:id="@+id/NAME"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="140dp"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="138dp"
         android:ems="10"
         android:hint="Введите выш ник"
         android:inputType="textPersonName"
@@ -119,10 +105,9 @@
         android:id="@+id/Connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="70dp"
         android:layout_marginTop="214dp"
+        android:layout_centerInParent="true"
         android:onClick="OnClick_Connect"
         android:text="Поключиться к вечеринке"
         android:visibility="invisible" />
@@ -136,6 +121,16 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="195dp"
         android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/ShowIpServer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="104dp"
+        android:text="" />
 
 
 </RelativeLayout>
